--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-  "engines": {"node":"18.12.1"},
+  "engines": {
+    "node": "18.12.1"
+  },
   "name": "portafolio",
   "version": "1.0.0",
   "description": "",
@@ -19,9 +21,11 @@
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
     "express-validator": "^6.14.1",
+    "form-data": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^3.0.0",
     "mysql2": "^2.3.3",
+    "node-fetch": "^2.6.7",
     "nodemon": "^2.0.15",
     "sequelize": "^6.20.1",
     "uuid": "^8.3.2"
