--- a/front/package.json
+++ b/front/package.json
@@ -13,9 +13,12 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.14.10",
+    "@mui/styles": "^5.14.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-tilt": "^1.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
